--- a/config/single_message_publisher.params.yaml
+++ b/config/single_message_publisher.params.yaml
@@ -1,3 +1,5 @@
 /**:
   ros__parameters:
     rate: 10.0
+    path_bag: /home/mfc/bags/rosbag2_2023_12_30-16_26_04
+    topic_cloud: /sensing/lidar/top/pointcloud_raw_ex
